--- a/MMM-WWI.css
+++ b/MMM-WWI.css
@@ -20,9 +20,9 @@
 }
 
 .MMM-WWI .icon { 
-/*  display: none;              uncomment if you don't want the picture at all */           
-  width: 10%;                /* adjust size of picture */
-  margin-left: 0px;          /* Precisely align picture with these */
+/*  display: none;              uncomment if you don't want the icon at all */           
+  width: 10%;                /* adjust size of icon */
+  margin-left: 0px;          /* Precisely align icon with these */
   margin-right: 135px;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -30,61 +30,71 @@
 }
 
 .MMM-WWI .summary {
-  color: #62FF00;               /* sunrise color. Default is white. */
-  text-align: left;           /* Align sunrise text  */
+  color: #62FF00;               /* summary color. Default is white. */
+  text-align: left;           /* Align summary text  */
 }
 
 .MMM-WWI .chill {
-  color: white;               /* sunset color. Default is white. */
-  text-align: left;           /* Align sunset text  */
+  color: white;               /* chill color. Default is white. */
+  text-align: left;           /* Align chill text  */
 }
 
 .MMM-WWI .ozone {
-  color: white;               /* solar_noon color. Default is white. */
-  text-align: left;            /* Align solar_noon text  */
+  color: white;               /* ozone color. Default is white. */
+  text-align: left;            /* Align ozone text  */
 }
 
 .MMM-WWI .StormDistance {
-  color: white;               /* day_length color. Default is white. */
-  text-align: left;            /* Align day_length text  */
+  color: white;               /* StormDistance color. Default is white. */
+  text-align: left;            /* Align StormDistance text  */
 }
 
 .MMM-WWI .StormBearing {
-  color: white;               /* civil_twilight_begin color. Default is white. */
-  text-align: left;            /* Align civil_twilight_begin text  */
+  color: white;               /* StormBearing color. Default is white. */
+  text-align: left;            /* Align StormBearing text  */
 }
 
 .MMM-WWI .windSpeed {
-  color: white;               /* civil_twilight_end color. Default is white. */
-  text-align: left;            /* Align civil_twilight_end text  */
+  color: white;               /* windSpeed color. Default is white. */
+  text-align: left;            /* Align windSpeed text  */
 }
 
 .MMM-WWI .windGust {
-  color: white;               /* nautical_twilight_begin color. Default is white. */
-  text-align: left;            /* Align nautical_twilight_begin text  */
+  color: white;               /* windGust color. Default is white. */
+  text-align: left;            /* Align windGust text  */
 }
 
 .MMM-WWI .windBearing {
-  color: white;               /* nautical_twilight_end color. Default is white. */
-  text-align: left;            /* Align nautical_twilight_end text  */
+  color: white;               /* windBearing color. Default is white. */
+  text-align: left;            /* Align windBearing text  */
 }
 
 .MMM-WWI .visibility {
-  color: white;               /* astronomical_twilight_begin color. Default is white. */
-  text-align: left;            /* Align astronomical_twilight_begin text  */
+  color: white;               /* visibility color. Default is white. */
+  text-align: left;            /* Align visibility text  */
+}
+
+.MMM-WWI .cloudCover {
+  color: white;               /* cloudCover color. Default is white. */
+  text-align: left;            /* Align cloudCover text  */
 }
 
 .MMM-WWI .pressure {
-  color: white;               /* astronomical_twilight_end color. Default is white. */
-  text-align: left;            /* Align astronomical_twilight_end text  */
+  color: white;               /* pressure color. Default is white. */
+  text-align: left;            /* Align pressure text  */
+}
+
+.MMM-WWI .humidity {
+  color: white;               /* humidity color. Default is white. */
+  text-align: left;            /* Align humidity text  */
 }
 
 .MMM-WWI .dewPoint {
-  color: white;               /* astronomical_twilight_end color. Default is white. */
-  text-align: left;            /* Align astronomical_twilight_end text  */
+  color: white;               /* dewPoint color. Default is white. */
+  text-align: left;            /* Align dewPoint text  */
 }
 
 .MMM-WWI .uvIndex {
-  color: white;               /* astronomical_twilight_end color. Default is white. */
-  text-align: left;            /* Align astronomical_twilight_end text  */
+  color: white;               /* uvIndex color. Default is white. */
+  text-align: left;            /* Align uvIndex text  */
 }
